force-app/main/default/objects/Animal__c/fields/Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID__c</fullName>
    <label>Animal_ID</label>
    <type>AutoNumber</type>
</CustomField>