force-app/main/default/objects/Animal__c/fields/AnimalMedicine__c.field-meta.xml
<CustomField>
    <fullName>AnimalMedicine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AnimalMedicine</label>
    <referenceTo>AnimalMedicine__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>