force-app/main/default/objects/Animal__c/fields/is_alive__c.field-meta.xml
<CustomField>
    <fullName>is_alive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>is_alive</label>
    <type>Checkbox</type>
</CustomField>